--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -26,7 +26,6 @@
                 <div class="mat-elevation-z8">
                     <table mat-table [dataSource]="dataSource">
 
-                        <!-- Checkbox Column -->
                         <ng-container matColumnDef="select">
                             <th mat-header-cell *matHeaderCellDef>
 
@@ -37,37 +36,31 @@
                             </td>
                         </ng-container>
 
-                        <!-- Position Column -->
-                        <ng-container matColumnDef="position">
-                            <th mat-header-cell *matHeaderCellDef> No. </th>
-                            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                        <ng-container matColumnDef="first_name">
+                            <th mat-header-cell *matHeaderCellDef> NOMBRE </th>
+                            <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
                         </ng-container>
 
-                        <!-- Name Column -->
-                        <ng-container matColumnDef="name">
-                            <th mat-header-cell *matHeaderCellDef> Name </th>
-                            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                        <ng-container matColumnDef="last_name">
+                            <th mat-header-cell *matHeaderCellDef> APELLIDO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
                         </ng-container>
 
-                        <!-- Weight Column -->
-                        <ng-container matColumnDef="apellido">
-                            <th mat-header-cell *matHeaderCellDef> Apellido </th>
-                            <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
+                        <ng-container matColumnDef="phone">
+                            <th mat-header-cell *matHeaderCellDef> TELEFONO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
                         </ng-container>
 
-                        <!-- Symbol Column -->
-                        <ng-container matColumnDef="carbonpay">
-                            <th mat-header-cell *matHeaderCellDef> Carbbonpay </th>
-                            <td mat-cell *matCellDef="let element"> {{element.carbonpay}} </td>
+                        <ng-container matColumnDef="email">
+                            <th mat-header-cell *matHeaderCellDef> EMAIL </th>
+                            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
                         </ng-container>
 
-                        <!-- Symbol Column -->
-                        <ng-container matColumnDef="type">
-                            <th mat-header-cell *matHeaderCellDef> Tipo </th>
-                            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+                        <ng-container matColumnDef="wallet">
+                            <th mat-header-cell *matHeaderCellDef> SALDO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.wallet}} </td>
                         </ng-container>
 
-                        <!-- Action Column -->
                         <ng-container matColumnDef="action">
                             <th mat-header-cell *matHeaderCellDef></th>
                             <td mat-cell *matCellDef="let element">
@@ -95,7 +88,6 @@
                 <div class="mat-elevation-z8">
                     <table mat-table [dataSource]="dataSource">
 
-                        <!-- Checkbox Column -->
                         <ng-container matColumnDef="select">
                             <th mat-header-cell *matHeaderCellDef>
 
@@ -106,37 +98,31 @@
                             </td>
                         </ng-container>
 
-                        <!-- Position Column -->
-                        <ng-container matColumnDef="position">
-                            <th mat-header-cell *matHeaderCellDef> No. </th>
-                            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                        <ng-container matColumnDef="first_name">
+                            <th mat-header-cell *matHeaderCellDef> NOMBRE </th>
+                            <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
                         </ng-container>
 
-                        <!-- Name Column -->
-                        <ng-container matColumnDef="name">
-                            <th mat-header-cell *matHeaderCellDef> Name </th>
-                            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                        <ng-container matColumnDef="last_name">
+                            <th mat-header-cell *matHeaderCellDef> APELLIDO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
                         </ng-container>
 
-                        <!-- Weight Column -->
-                        <ng-container matColumnDef="apellido">
-                            <th mat-header-cell *matHeaderCellDef> Apellido </th>
-                            <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
+                        <ng-container matColumnDef="phone">
+                            <th mat-header-cell *matHeaderCellDef> TELEFONO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
                         </ng-container>
 
-                        <!-- Symbol Column -->
-                        <ng-container matColumnDef="carbonpay">
-                            <th mat-header-cell *matHeaderCellDef> Carbbonpay </th>
-                            <td mat-cell *matCellDef="let element"> {{element.carbonpay}} </td>
+                        <ng-container matColumnDef="email">
+                            <th mat-header-cell *matHeaderCellDef> EMAIL </th>
+                            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
                         </ng-container>
 
-                        <!-- Symbol Column -->
-                        <ng-container matColumnDef="type">
-                            <th mat-header-cell *matHeaderCellDef> Tipo </th>
-                            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+                        <ng-container matColumnDef="wallet">
+                            <th mat-header-cell *matHeaderCellDef> SALDO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.wallet}} </td>
                         </ng-container>
 
-                        <!-- Action Column -->
                         <ng-container matColumnDef="action">
                             <th mat-header-cell *matHeaderCellDef></th>
                             <td mat-cell *matCellDef="let element">
@@ -163,7 +149,6 @@
                 <div class="mat-elevation-z8">
                     <table mat-table [dataSource]="dataSource">
 
-                        <!-- Checkbox Column -->
                         <ng-container matColumnDef="select">
                             <th mat-header-cell *matHeaderCellDef>
 
@@ -174,37 +159,31 @@
                             </td>
                         </ng-container>
 
-                        <!-- Position Column -->
-                        <ng-container matColumnDef="position">
-                            <th mat-header-cell *matHeaderCellDef> No. </th>
-                            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                        <ng-container matColumnDef="first_name">
+                            <th mat-header-cell *matHeaderCellDef> NOMBRE </th>
+                            <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
                         </ng-container>
 
-                        <!-- Name Column -->
-                        <ng-container matColumnDef="name">
-                            <th mat-header-cell *matHeaderCellDef> Name </th>
-                            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                        <ng-container matColumnDef="last_name">
+                            <th mat-header-cell *matHeaderCellDef> APELLIDO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
                         </ng-container>
 
-                        <!-- Weight Column -->
-                        <ng-container matColumnDef="apellido">
-                            <th mat-header-cell *matHeaderCellDef> Apellido </th>
-                            <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
+                        <ng-container matColumnDef="phone">
+                            <th mat-header-cell *matHeaderCellDef> TELEFONO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
                         </ng-container>
 
-                        <!-- Symbol Column -->
-                        <ng-container matColumnDef="carbonpay">
-                            <th mat-header-cell *matHeaderCellDef> Carbbonpay </th>
-                            <td mat-cell *matCellDef="let element"> {{element.carbonpay}} </td>
+                        <ng-container matColumnDef="email">
+                            <th mat-header-cell *matHeaderCellDef> EMAIL </th>
+                            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
                         </ng-container>
 
-                        <!-- Symbol Column -->
-                        <ng-container matColumnDef="type">
-                            <th mat-header-cell *matHeaderCellDef> Tipo </th>
-                            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+                        <ng-container matColumnDef="wallet">
+                            <th mat-header-cell *matHeaderCellDef> SALDO </th>
+                            <td mat-cell *matCellDef="let element"> {{element.wallet}} </td>
                         </ng-container>
 
-                        <!-- Action Column -->
                         <ng-container matColumnDef="action">
                             <th mat-header-cell *matHeaderCellDef></th>
                             <td mat-cell *matCellDef="let element">
